Build/third-party-libraries/packages/nuget.org/microsoft.codeanalysis.common/3.4.0/readme.md
Microsoft.CodeAnalysis.Common [3.4.0](https://www.nuget.org/packages/Microsoft.CodeAnalysis.Common/3.4.0)
--------------------

Used by: DesignTime internal

Target frameworks: netcoreapp2.1

License: [Apache-2.0](../../../../licenses/apache-2.0) 

- package license: [Apache-2.0](https://licenses.nuget.org/Apache-2.0) 
- repository license: [MIT](https://github.com/dotnet/roslyn) 
- project license: [MIT](https://github.com/dotnet/roslyn) 

Description
-----------
A shared package used by the Microsoft .NET Compiler Platform ("Roslyn").
      Do not install this package manually, it will be added as a prerequisite by other packages that require it.
    
      More details at https://aka.ms/roslyn-packages
      This package was built from the source at https://github.com/dotnet/roslyn/commit/82f2e2541478e239dc4b04f231e90dc2b3dcb422.

Remarks
-----------
no remarks


Dependencies 4
-----------

|Name|Version|
|----------|:----|
|[System.Collections.Immutable](../../../../packages/nuget.org/system.collections.immutable/1.5.0)|1.5.0|
|[System.Reflection.Metadata](../../../../packages/nuget.org/system.reflection.metadata/1.6.0)|1.6.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/4.5.2)|4.5.2|
|[System.Text.Encoding.CodePages](../../../../packages/nuget.org/system.text.encoding.codepages/4.5.1)|4.5.1|

*This page was generated by a tool.*