Build/third-party-libraries/packages/nuget.org/microsoft.codeanalysis.common/3.11.0/readme.md
Microsoft.CodeAnalysis.Common [3.11.0](https://www.nuget.org/packages/Microsoft.CodeAnalysis.Common/3.11.0)
--------------------

Used by: DesignTime

Target frameworks: net5.0, net6.0, netcoreapp3.1, netstandard2.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/dotnet/roslyn) 
- project license: [MIT](https://github.com/dotnet/roslyn) 

Description
-----------
A shared package used by the Microsoft .NET Compiler Platform ("Roslyn").
      Do not install this package manually, it will be added as a prerequisite by other packages that require it.
    
      More details at https://aka.ms/roslyn-packages
      This package was built from the source at https://github.com/dotnet/roslyn/commit/ae1fff344d46976624e68ae17164e0607ab68b10.

Remarks
-----------
no remarks


Dependencies 8
-----------

|Name|Version|
|----------|:----|
|[Microsoft.CodeAnalysis.Analyzers](../../../../packages/nuget.org/microsoft.codeanalysis.analyzers/3.3.2)|3.3.2|
|[System.Collections.Immutable](../../../../packages/nuget.org/system.collections.immutable/5.0.0)|5.0.0|
|[System.Memory](../../../../packages/nuget.org/system.memory/4.5.4)|4.5.4|
|[System.Reflection.Metadata](../../../../packages/nuget.org/system.reflection.metadata/5.0.0)|5.0.0|
|[System.Runtime.CompilerServices.Unsafe](../../../../packages/nuget.org/system.runtime.compilerservices.unsafe/5.0.0)|5.0.0|
|[System.Text.Encoding.CodePages](../../../../packages/nuget.org/system.text.encoding.codepages/4.5.1)|4.5.1|
|[System.Threading.Tasks.Extensions](../../../../packages/nuget.org/system.threading.tasks.extensions/4.5.4)|4.5.4|
|[System.Text.Encoding.CodePages](../../../../packages/nuget.org/system.text.encoding.codepages/5.0.0)|5.0.0|

*This page was generated by a tool.*